--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <div class="hero-carousel reveal-right">
                     <div class="carousel-wrapper">
                         <div class="slide active">
-                            <img src="assets/img/fachada.jpg" alt="Fachada Vital e Marques Valparaíso">
+                            <img src="/assets/img/fachada.jpeg" alt="Fachada Vital e Marques Valparaíso">
                         </div>
                         <div class="slide">
-                            <img src="assets/img/recepcao.jpg" alt="Recepção do Escritório">
+                            <img src="/assets/img/recepção.jpeg" alt="Recepção do Escritório">
                         </div>
                         <div class="slide">
-                            <img src="assets/img/equipe.jpg" alt="Equipe Vital e Marques">
+                            <img src="/assets/img/entrada.jpeg" alt="Entrada do Escritório">
                         </div>
                         
                         <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
@@ -80,7 +80,7 @@
             <div class="container stats-grid">
                 <div class="stat-box reveal-up">
                     <i class="fas fa-calendar-check"></i>
-                    <h3 class="counter" data-target="15">0</h3>
+                    <h3 class="counter" data-target="10">0</h3>
                     <p>Anos de Mercado</p>
                 </div>
                 <div class="stat-box reveal-up" style="transition-delay: 0.2s">
