--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
                 <div class="hero-carousel reveal-right">
                     <div class="carousel-wrapper">
-                        <div class="slide active"><img src="assets/img/fachada.jpeg" alt="Sede Vital e Marques"></div>
                         <div class="slide"><img src="assets/img/recepção.jpeg" alt="Escritório Profissional"></div>
                         <div class="slide"><img src="assets/img/entrada.jpeg" alt="Vital e Marques"></div>
+                        <div class="slide"><img src="/assets/img/post instagram.png" alt="Vital e Marques"></div>
+                        <div class="slide"><img src="/assets/img/logo vital e marques.png" alt="Vital e Marques"></div>
                         <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
                         <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
                     </div>
