--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="hero-carousel reveal-right">
                     <div class="carousel-wrapper">
                         <div class="slide"><img src="assets/img/recepção.jpeg" alt="Escritório Profissional"></div>
-                        <div class="slide"><img src="assets/img/entrada.jpeg" alt="Vital e Marques"></div>
+                        <div class="slide"><img src="/assets/img/entrada.jpeg" alt="Vital e Marques"></div>
                         <div class="slide"><img src="/assets/img/post insta.png" alt="Vital e Marques"></div>
                         <div class="slide"><img src="/assets/img/logo vital e marques.png" alt="Vital e Marques"></div>
                         <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
